# Joke-Generator

./: README.md  pyproject.toml
joke_generator/: controller.py  interface.py
