[tool.poetry]
name = "joke-generator"
version = "0.1.0"
description = ""
authors = ["Alex Price <prica277@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "joke_generator"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
