[tool.poetry]
name = "joke-generator"
version = "0.1.0"
description = ""
authors = ["Alex Price <prica277@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "joke_generator"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pyqt6 = "^6.6.1"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
